--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,9 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
       - name: Set Node.js 14.18.2
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          version: 14.x
+          node-version: 14
       - run: npm ci
       - run: npm run build
       - name: Unit Tests
