--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "framer-motion": "^7.5.3",
+    "history": "^5.3.0",
     "oaf-react-router": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
